--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -76,6 +76,11 @@
   }
 }
 
+.display{
+  display: flex;
+  justify-content: flex-end;
+}
+
 body {
   margin: 0;
   font-family: var(--bs-body-font-family);
