--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -10,6 +10,10 @@
  * Copyright 2011-2021 Twitter, Inc.
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
  */
+.bad{
+  background: linear-gradient(blue,red);
+  color: white;
+}
 :root {
   --bs-blue: #0d6efd;
   --bs-indigo: #6610f2;
