--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,3 +1,6 @@
+
+
+
 @charset "UTF-8";
 /*!
 * Start Bootstrap - One Page Wonder v6.0.5 (https://startbootstrap.com/theme/one-page-wonder)
@@ -22,9 +25,45 @@
 .popo
   {
     display: flex;
+    flex-direction: column;
+    align-items: flex-start;
     margin-right: 20px;
   }
+  .pipi{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 5vh;
+  }
+  .displaypi{
+    display: flex;
+    font-size: 4rem;
+    justify-content: flex-end;
+    color: #fff;
+    margin-bottom: 5vh;
+    margin-top: 3vh;
+  }
+  #in{
+    font-size: 7vh;
+    color: #4E4EFE;
+    margin-right: 1rem;
+  }
+  #insta{
+    font-size: 7vh;
+    color: rgba(238, 78, 78, 1);
+    margin-right: 1rem;
+  }
+  #face{
+    font-size: 7vh;
+    color: #3b5998;
+  }
 
+  .logo{
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    line-height: 0.5vh;
+  }
 :root {
   --bs-blue: #0d6efd;
   --bs-indigo: #6610f2;
@@ -94,6 +133,7 @@
 .display{
   display: flex;
   justify-content: flex-end;
+  color: #fff;
 }
 
 body {
@@ -134,7 +174,7 @@ h1, .h1 {
 }
 @media (min-width: 1200px) {
   h1, .h1 {
-    font-size: 2.5rem;
+    font-size: 2rem ;
   }
 }
 
@@ -3051,13 +3091,11 @@ textarea.form-control-lg {
 
 .btn-primary {
   color: #fff;
-  background-color: #ee0979;
-  border-color: #ee0979;
+  background-color: black;
 }
 .btn-primary:hover {
   color: #fff;
-  background-color: #ca0867;
-  border-color: #be0761;
+  background-color: #C42256;
 }
 .btn-check:focus + .btn-primary, .btn-primary:focus {
   color: #fff;
@@ -3964,6 +4002,7 @@ textarea.form-control-lg {
   display: block;
   padding: 0.5rem 1rem;
   color: #ee0979;
+  font-size: 1.5rem;
   text-decoration: none;
   transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out;
 }
@@ -7516,6 +7555,7 @@ textarea.form-control-lg {
 .py-5 {
   padding-top: 3rem !important;
   padding-bottom: 3rem !important;
+  background-color: #3F383C;
 }
 
 .pt-0 {
@@ -11344,7 +11384,9 @@ header.masthead {
   overflow: hidden;
   padding-top: calc(7rem + 72px);
   padding-bottom: 7rem;
-  background: linear-gradient(0deg, #ff6a00 0%, #ee0979 100%);
+  background: #fffbd5; 
+background: -webkit-linear-gradient(to bottom, #b20a2c, #fffbd5);  
+background: linear-gradient(to bottom, #b20a2c, #fffbd5); 
   background-repeat: no-repeat;
   background-position: center center;
   background-attachment: scroll;
@@ -11355,7 +11397,7 @@ header.masthead .masthead-content {
   position: relative;
 }
 header.masthead .masthead-content .masthead-heading {
-  font-size: 4rem;
+  font-size: 3rem;
 }
 header.masthead .masthead-content .masthead-subheading {
   font-size: 2rem;
@@ -11396,10 +11438,16 @@ header.masthead .bg-circle-4 {
     padding-top: calc(10rem + 55px);
     padding-bottom: 10rem;
   }
+
+  .masthead-heading {
+    font-size: 0.5rem;
+  }
+
   header.masthead .masthead-content .masthead-heading {
     font-size: 6rem;
   }
   header.masthead .masthead-content .masthead-subheading {
-    font-size: 4rem;
+    font-size: 3rem;
+    font-family: 'Catamaran', sans-serif;
   }
 }
