--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -14,6 +14,10 @@
   background: linear-gradient(blue,red);
   color: white;
 }
+.lien{
+  text-decoration: none;
+  color: white;
+}
 :root {
   --bs-blue: #0d6efd;
   --bs-indigo: #6610f2;
