--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -13,6 +13,13 @@
  * Copyright 2011-2021 Twitter, Inc.
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
  */
+
+.logo{
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  line-height: 0.5vh;
+}
 .bad
 {
   background: url(../img/background_red_blue.jpg);
@@ -11384,9 +11391,9 @@ header.masthead {
   overflow: hidden;
   padding-top: calc(7rem + 72px);
   padding-bottom: 7rem;
-  background: #fffbd5; 
-background: -webkit-linear-gradient(to bottom, #b20a2c, #fffbd5);  
-background: linear-gradient(to bottom, #b20a2c, #fffbd5); 
+  background: #fffbd5;
+background: -webkit-linear-gradient(to bottom, #b20a2c, #fffbd5);
+background: linear-gradient(to bottom, #b20a2c, #fffbd5);
   background-repeat: no-repeat;
   background-position: center center;
   background-attachment: scroll;
