--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -13,10 +13,7 @@
  * Copyright 2011-2021 Twitter, Inc.
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
  */
-.foot{
-  background-color: linear-gradient(180deg, #3F383C 0%, rgba(75, 47, 47, 0.5) 100%);
 
-}
 .logo{
   display: flex;
   align-items: center;
@@ -30,18 +27,12 @@
   color: white;
 }
 .foot{
-  background-color: linear-gradient(180deg, #3F383C 0%, rgba(75, 47, 47, 0.5) 100%);
-
-}
-
-.coloration
-{
-  color: white;
+  background: linear-gradient(180deg, #3F383C 0%, rgba(75, 47, 47, 0.5) 100%);
 }
 .popo
   {
     display: flex;
-
+    flex-direction: column;
     align-items: flex-start;
     margin-right: 20px;
   }
@@ -147,8 +138,8 @@
 }
 
 .display{
-
-  text-align: left;
+  display: flex;
+  justify-content: flex-end;
   color: #fff;
 }
 
@@ -183,7 +174,6 @@ h6, .h6, h5, .h5, h4, .h4, h3, .h3, h2, .h2, h1, .h1 {
   font-family: "Catamaran", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   font-weight: 800;
   line-height: 1.2;
-
 }
 
 h1, .h1 {
@@ -229,6 +219,7 @@ h5, .h5 {
 h6, .h6 {
   font-size: 1rem;
 }
+
 p {
   margin-top: 0;
   margin-bottom: 1rem;
@@ -672,7 +663,7 @@ progress {
   color: #6c757d;
 }
 .blockquote-footer::before {
-  content: "— ";
+  content: "— ";
 }
 
 .img-fluid {
@@ -745,8 +736,8 @@ progress {
 .row {
   --bs-gutter-x: 1.5rem;
   --bs-gutter-y: 0;
-  /* display: flex;
-  flex-wrap: wrap; */
+  display: flex;
+  flex-wrap: wrap;
   margin-top: calc(-1 * var(--bs-gutter-y));
   margin-right: calc(-0.5 * var(--bs-gutter-x));
   margin-left: calc(-0.5 * var(--bs-gutter-x));
@@ -2499,7 +2490,7 @@ textarea.form-control-lg {
   border-radius: 0.25rem;
   transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
   -webkit-appearance: none;
-     -moz-appearance: none;
+    -moz-appearance: none;
           appearance: none;
 }
 @media (prefers-reduced-motion: reduce) {
@@ -2651,7 +2642,7 @@ textarea.form-control-lg {
   padding: 0;
   background-color: transparent;
   -webkit-appearance: none;
-     -moz-appearance: none;
+    -moz-appearance: none;
           appearance: none;
 }
 .form-range:focus {
@@ -2705,7 +2696,7 @@ textarea.form-control-lg {
   -moz-transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
   transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
   -moz-appearance: none;
-       appearance: none;
+      appearance: none;
 }
 @media (prefers-reduced-motion: reduce) {
   .form-range::-moz-range-thumb {
@@ -4176,7 +4167,6 @@ textarea.form-control-lg {
 }
 .navbar-toggler:hover {
   text-decoration: none;
-  color: red;
 }
 .navbar-toggler:focus {
   text-decoration: none;
@@ -4192,7 +4182,6 @@ textarea.form-control-lg {
   background-repeat: no-repeat;
   background-position: center;
   background-size: 100%;
-  color: red;
 }
 
 .navbar-nav-scroll {
@@ -4518,7 +4507,7 @@ textarea.form-control-lg {
 }
 
 .navbar-light .navbar-brand {
-  color: rgba(173, 22, 22, 0.9);
+  color: rgba(0, 0, 0, 0.9);
 }
 .navbar-light .navbar-brand:hover, .navbar-light .navbar-brand:focus {
   color: rgba(0, 0, 0, 0.9);
@@ -11403,8 +11392,8 @@ header.masthead {
   padding-top: calc(7rem + 72px);
   padding-bottom: 7rem;
   background: #fffbd5;
-  background: -webkit-linear-gradient(to bottom, #b20a2c, #fffbd5);
-  background: linear-gradient(to bottom, #b20a2c, #fffbd5);
+background: -webkit-linear-gradient(to bottom, #b20a2c, #fffbd5);
+background: linear-gradient(to bottom, #b20a2c, #fffbd5);
   background-repeat: no-repeat;
   background-position: center center;
   background-attachment: scroll;
